fixed feedback missing in dark mode

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -54,7 +54,6 @@ main .clickable-card:hover {
     background-color: var(--white1);
 }
 
-
 main .card li{
     background-color: var(--white2);
 }
@@ -63,6 +62,10 @@ main .card li{
 body.dark main .card li,
 body.dark main .card {
     background-color: var(--white3);
+}
+
+body.dark main .clickable-card:hover {
+    background-color: var(--white1);
 }
 
 p,
